Доработал конфигурации, доработал класс контроллер, сервис и клиент, добавил WebConfig, добавил настройку, файл, исключение и модель